--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-     "install-client": "npm install",
-    "heroku-build": "npm run install-client && npm run build",
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint": "8.0.0",
+    "eslint-config-next": "11.1.2",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
@@ -23,8 +23,5 @@
     "react-dom": "17.0.2",
     "react-responsive-carousel": "^3.2.21"
   },
-  "devDependencies": {
-    "eslint": "8.0.0",
-    "eslint-config-next": "11.1.2"
-  }
+
 }
