--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.0.0",
-    "eslint-config-next": "11.1.2",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
@@ -21,7 +19,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-responsive-carousel": "^3.2.21"
-  },
-
-}
+    "react-responsive-carousel": "^3.2.21",
+    "eslint": "8.0.0",
+    "eslint-config-next": "11.1.2"
+  }
+}  
